# TenX_W2_Intereme

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_ops.pckl
audit/report_bypeer_received/: README.md  final_report.md
audit/report_onpeer_generated/: README.md  final_report.json  final_report.md  peer_audit_final_result_20260228_130833.json  peer_audit_final_result_20260228_130833.md  peer_audit_final_result_20260228_155846.json  peer_audit_final_result_20260228_155846.md
audit/report_onself_generated/: final_report.json  final_report.md  final_report_20260228_164822.md  final_report_20260228_165418.json  final_report_20260228_165418.md  final_report_20260228_165641.json  final_report_20260228_165641.md  final_report_20260228_165712.json  final_report_20260228_165712.md  final_report_20260228_165734.json  final_report_20260228_165734.md
docs/: BEST_PRACTICES.md  PROJECT_ARCHITECTURE.md
governance_swarm/: README.md
governance_swarm/reports/: interim_report.md
governance_swarm/src/: graph.py  main.py  reporting.py  state.py
governance_swarm/src/nodes/: detectives.py
reports/: final_report.md  interim_report.md  stategraph.mmd
rubric/: week2_rubric.json
scripts/: langsmith_upload.py  trace_check.py
src/: __init__.py  graph.py  main.py  models.py  reporting.py  state.py  visualize_graph.py
src/nodes/: detectives.py  judges.py  justice.py  orchestration.py  supreme_court.py
src/tools/: __init__.py  ast_parser.py  doc_tools.py  repo_tools.py
(+1 files in other folders)
